add lazy load for images

--- a/portraits/index.html
+++ b/portraits/index.html
@@ -37,32 +37,40 @@
     <main class="gallery">
         <img class="gallery-img"
              src="https://res.cloudinary.com/dnp7rf0u9/image/upload/v1734345761/DSC02014_xrjcfk.jpg"
-             alt="An extreme close up of Shubomi in Nigeria, there are trees behind him and they are extremely blurred">
+             alt="An extreme close up of Shubomi in Nigeria, there are trees behind him and they are extremely blurred"
+             loading="lazy">
 
         <img class="gallery-img" src="https://res.cloudinary.com/dnp7rf0u9/image/upload/v1734345761/DSC02016_eald0w.jpg"
-             alt="A full body portrait of Shubomi in Nigeria, there are palm trees behind him and they are slightly blurred">
+             alt="A full body portrait of Shubomi in Nigeria, there are palm trees behind him and they are slightly blurred"
+             loading="lazy">
 
         <img class="gallery-img"
              src="https://res.cloudinary.com/dnp7rf0u9/image/upload/v1734342997/DSC01892_le9cuv.jpg"
-             alt="A picture of author Jackson P. Brown's profile. She's standing in front of a dark green hedge which is blurred.">
+             alt="A picture of author Jackson P. Brown's profile. She's standing in front of a dark green hedge which is blurred."
+             loading="lazy">
 
 
         <img class="gallery-img"
              src="https://res.cloudinary.com/dnp7rf0u9/image/upload/v1734342996/DSC01927_yiv43f.jpg"
-             alt="A mid-body portrait of author Jackson P. Brown. She's standing in front of a tall flowering plant with orange and yellow flowers.">
+             alt="A mid-body portrait of author Jackson P. Brown. She's standing in front of a tall flowering plant
+             with orange and yellow flowers." loading="lazy">
 
 
         <img class="gallery-img"
              src="https://res.cloudinary.com/dnp7rf0u9/image/upload/v1734342377/DSC00285_g0xhxe.jpg"
-             alt="A close up of Esther's ear, she's wearing a hoop in her earlobe followed by three studs and a very small hoop.">
+             alt="A close up of Esther's ear, she's wearing a hoop in her earlobe followed by three studs and a very small hoop."
+             loading="lazy">
 
         <img class="gallery-img"
              src="https://res.cloudinary.com/dnp7rf0u9/image/upload/v1734342194/DSC00261_qxho9a.jpg"
-             alt="A close up portrait of Esther, she's wearing thick black sunglasses with orange lenses and stands infront of a shiney green tiled wall.">
+             alt="A close up portrait of Esther, she's wearing thick black sunglasses with orange lenses and
+             stands infront of a shiney green tiled wall." loading="lazy">
 
         <img class="gallery-img"
              src="https://res.cloudinary.com/dnp7rf0u9/image/upload/v1734342341/DSC00298_ysnfdi.jpg"
-             alt="A close up of Esther's hands and neck. She's wearing a thin chain with a pendant in the shape of Africa, another longer chain with a gold seashell pendant. Her nails are long almond shape in a sky blue colour with 3d chrome designs">
+             alt="A close up of Esther's hands and neck. She's wearing a thin chain with a pendant in the shape of Africa,
+              another longer chain with a gold seashell pendant.
+              Her nails are long almond shape in a sky blue colour with 3d chrome designs" loading="lazy">
 
     </main>
     {% include "partials/_foot.njk" %}
