--- a/profile.html
+++ b/profile.html
@@ -54,7 +54,7 @@
 
         <img class="profile-img"
              src="https://res.cloudinary.com/dnp7rf0u9/image/upload/v1734340428/img20230202_19005820_kkimbj.jpg"
-             alt="A black and white portrait of lola odelola">
+             alt="A black and white portrait of lola odelola" loading="lazy">
 
     </main>
     {% include "partials/_foot.njk" %}
